--- a/public/frontend/css/rsmenu-main.css
+++ b/public/frontend/css/rsmenu-main.css
@@ -630,7 +630,7 @@ Version: 1.0.0
 		padding: 20px;	
 		cursor:pointer;
 		line-height: 15px;
-		background: #181818;
+		background: #fff;
 		border-left: 1px solid #131313;		
 		
 		/* Remove the blue Webkit background when element is tapped */
@@ -690,8 +690,8 @@ Version: 1.0.0
 	.rs-menu-toggle {      
 		padding: 14.5px;
 		display: block;
-		background: #222;
-		border-left: 1px solid #222;
+		/* background: #222; */
+		/* border-left: 1px solid #222; */
 		position: relative;
 		cursor:pointer;		
 		color: #eee;
